production/app.yaml
kind: Service
apiVersion: v1
metadata:
  name: hello-code-with-quarkus
spec:
  selector:
    app: hello-code-with-quarkus
  ports:
  - port: 8080
---

kind: Deployment
apiVersion: apps/v1
metadata:
  name: hello-code-with-quarkus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-code-with-quarkus
      version: v1
  template:
    metadata:
      labels:
        app: hello-code-with-quarkus
        version: v1
      annotations:
        revision: "4f6819165d87f20759ca83b86cb843c6db3dfcbd"
    spec:
      containers:
      - name: hello-code-with-quarkus
        image: bahkuyt/hello-code-with-quarkus:4f6819165d87f20759ca83b86cb843c6db3dfcbd
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        readinessProbe:
          exec:
            command: ["sh", "-c", "curl -s http://localhost:8080/health | grep -q UP"]
          initialDelaySeconds: 15
      imagePullSecrets:
      - name: regcred
      restartPolicy: Always
---


apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello-virtualservice
spec:
  hosts:
  - "hello.bahkuyt.tech"
  gateways:
  - hello-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 8080
        host: hello-code-with-quarkus

# apiVersion: networking.istio.io/v1alpha3
# kind: VirtualService
# metadata:
#   name: hello-code-with-quarkus
# spec:
#   hosts:
#   - hello-code-with-quarkus
#   http:
#   - route:
#     - destination:
#         host: hello-code-with-quarkus
#         subset: v1
---

# apiVersion: networking.istio.io/v1alpha3
# kind: DestinationRule
# metadata:
#   name: hello-code-with-quarkus
# spec:
#   host: hello-code-with-quarkus
#   subsets:
#   - name: v1
#     labels:
#       version: v1
---
